add pagination to sensi results (#29)
Signed-off-by: Seddik Yengui <seddik.yengui@rte-france.com>