@@ -6,24 +6,8 @@
  */
 package org.gridsuite.sensitivityanalysis.server.repositories;
 
-import java.util.ArrayList;
-import java.util.Collection;
-import java.util.Collections;
-import java.util.Comparator;
-import java.util.HashMap;
-import java.util.List;
-import java.util.Map;
-import java.util.Objects;
-import java.util.Optional;
-import java.util.Set;
-import java.util.TreeSet;
-import java.util.UUID;
-import java.util.stream.Collectors;
-
-import java.time.LocalDateTime;
-import java.time.temporal.ChronoUnit;
-
-import org.apache.commons.lang3.tuple.Pair;
+import com.powsybl.sensitivity.SensitivityAnalysisResult;
+import com.powsybl.sensitivity.SensitivityValue;
 import org.gridsuite.sensitivityanalysis.server.ResultsSelector;
 import org.gridsuite.sensitivityanalysis.server.dto.SensitivityOfTo;
 import org.gridsuite.sensitivityanalysis.server.dto.SensitivityRunQueryResult;
@@ -31,15 +15,30 @@ import org.gridsuite.sensitivityanalysis.server.dto.SensitivityWithContingency;
 import org.gridsuite.sensitivityanalysis.server.entities.AnalysisResultEntity;
 import org.gridsuite.sensitivityanalysis.server.entities.ContingencyEmbeddable;
 import org.gridsuite.sensitivityanalysis.server.entities.GlobalStatusEntity;
-import org.gridsuite.sensitivityanalysis.server.entities.SensitivityEmbeddable;
+import org.gridsuite.sensitivityanalysis.server.entities.SensitivityEntity;
 import org.gridsuite.sensitivityanalysis.server.entities.SensitivityFactorEmbeddable;
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageRequest;
+import org.springframework.data.domain.Pageable;
+import org.springframework.data.domain.Sort;
+import org.springframework.data.jpa.domain.Specification;
 import org.springframework.stereotype.Repository;
 import org.springframework.transaction.annotation.Transactional;
 
-import com.powsybl.sensitivity.SensitivityAnalysisResult;
-import com.powsybl.sensitivity.SensitivityFunctionType;
+import java.time.LocalDateTime;
+import java.time.temporal.ChronoUnit;
+import java.util.ArrayList;
+import java.util.Collection;
+import java.util.Collections;
+import java.util.List;
+import java.util.Map;
+import java.util.Objects;
+import java.util.Set;
+import java.util.TreeSet;
+import java.util.UUID;
+import java.util.function.Supplier;
+import java.util.stream.Collectors;
+import java.util.stream.Stream;
 
 /**
  * @author Franck Lecuyer <franck.lecuyer at rte-france.com>
@@ -47,33 +46,58 @@ import com.powsybl.sensitivity.SensitivityFunctionType;
 @Repository
 public class SensitivityAnalysisResultRepository {
 
-    private static final Logger LOGGER = LoggerFactory.getLogger(SensitivityAnalysisResultRepository.class);
-
     private final GlobalStatusRepository globalStatusRepository;
 
     private final AnalysisResultRepository analysisResultRepository;
 
+    private final SensitivityRepository sensitivityRepository;
+
     public SensitivityAnalysisResultRepository(GlobalStatusRepository globalStatusRepository,
-                                               AnalysisResultRepository analysisResultRepository) {
+                                               AnalysisResultRepository analysisResultRepository,
+                                               SensitivityRepository sensitivityRepository) {
         this.globalStatusRepository = globalStatusRepository;
         this.analysisResultRepository = analysisResultRepository;
+        this.sensitivityRepository = sensitivityRepository;
     }
 
     private static AnalysisResultEntity toAnalysisResultEntity(UUID resultUuid, SensitivityAnalysisResult result) {
         List<SensitivityFactorEmbeddable> factors = result.getFactors().stream().map(f ->
-            new SensitivityFactorEmbeddable(f.getFunctionType(), f.getFunctionId(),
-                f.getVariableType(), f.getVariableId(), f.isVariableSet(),
-                f.getContingencyContext().getContextType(), f.getContingencyContext().getContingencyId()))
-            .collect(Collectors.toList());
+                new SensitivityFactorEmbeddable(f.getFunctionType(), f.getFunctionId(),
+                        f.getVariableType(), f.getVariableId(), f.isVariableSet(),
+                        f.getContingencyContext().getContextType(), f.getContingencyContext().getContingencyId())).toList();
         List<ContingencyEmbeddable> contingencies = result.getContingencyStatuses().stream().map(cs ->
-                new ContingencyEmbeddable(cs.getContingencyId(), cs.getStatus()))
-            .collect(Collectors.toList());
-        List<SensitivityEmbeddable> sensitivities = result.getValues().stream()
-            .map(v -> new SensitivityEmbeddable(v.getFactorIndex(), v.getContingencyIndex(),
-                v.getValue(), v.getFunctionReference()))
+                new ContingencyEmbeddable(cs.getContingencyId(), cs.getStatus())).toList();
+        Supplier<Stream<SensitivityValue>> sensitivityWithoutContingency = () -> result.getValues().stream().filter(s -> s.getContingencyIndex() < 0);
+        List<SensitivityEntity> sensitivities = result.getValues().stream()
+            .map(v -> getSensitivityEntity(factors, contingencies, sensitivityWithoutContingency, v))
             .collect(Collectors.toList());
         //To avoid consistency issue we truncate the time to microseconds since postgres and h2 can only store a precision of microseconds
-        return new AnalysisResultEntity(resultUuid, LocalDateTime.now().truncatedTo(ChronoUnit.MICROS), factors, contingencies, sensitivities);
+        return new AnalysisResultEntity(resultUuid, LocalDateTime.now().truncatedTo(ChronoUnit.MICROS), sensitivities);
+    }
+
+    private static SensitivityEntity getSensitivityEntity(List<SensitivityFactorEmbeddable> factors,
+                                                          List<ContingencyEmbeddable> contingencies,
+                                                          Supplier<Stream<SensitivityValue>> sensitivityWithoutContingency,
+                                                          SensitivityValue sensitivityValue) {
+        if (sensitivityValue.getContingencyIndex() >= 0) {
+            var factor = factors.get(sensitivityValue.getFactorIndex());
+            var base = sensitivityWithoutContingency.get().filter(s -> {
+                var funcId = factors.get(s.getFactorIndex()).getFunctionId();
+                var varId = factors.get(s.getFactorIndex()).getVariableId();
+
+                return Objects.equals(factor.getFunctionId(), funcId) && Objects.equals(factor.getVariableId(), varId);
+            }).findFirst().orElse(null);
+            return new SensitivityEntity(factors.get(sensitivityValue.getFactorIndex()),
+                                                     sensitivityValue.getContingencyIndex() < 0 ? null : contingencies.get(sensitivityValue.getContingencyIndex()),
+                                                     base == null ? 0 : base.getValue(),
+                                                     base == null ? 0 : base.getFunctionReference(),
+                                                     sensitivityValue.getValue(),
+                                                     sensitivityValue.getFunctionReference());
+        }
+        return new SensitivityEntity(factors.get(sensitivityValue.getFactorIndex()),
+                                     sensitivityValue.getContingencyIndex() < 0 ? null : contingencies.get(sensitivityValue.getContingencyIndex()),
+                                     sensitivityValue.getValue(),
+                                     sensitivityValue.getFunctionReference());
     }
 
     private static GlobalStatusEntity toStatusEntity(UUID resultUuid, String status) {
@@ -120,71 +144,6 @@ public class SensitivityAnalysisResultRepository {
         }
     }
 
-    interface SensitivityConsumer {
-        void consume(SensitivityEmbeddable sar, ContingencyEmbeddable c, SensitivityFactorEmbeddable f);
-    }
-
-    private int apply(AnalysisResultEntity sas, Collection<String> funcIds, Collection<String> varIds, Collection<String> contingencyIds,
-        List<ContingencyEmbeddable> cs, List<SensitivityFactorEmbeddable> fs, SensitivityFunctionType funcType,
-        Set<String> allFunctionIds, Set<String> allVariableIds, Set<String> allContingencyIds, SensitivityConsumer handle) {
-        int count = 0;
-        for (SensitivityEmbeddable sar : sas.getSensitivities()) {
-            int fi = sar.getFactorIndex();
-            SensitivityFactorEmbeddable f = fs.get(fi);
-
-            if (f.getFunctionType() != funcType) {
-                continue;
-            }
-
-            int ci = sar.getContingencyIndex();
-            ContingencyEmbeddable c = ci < 0 ? null : cs.get(ci);
-            if (ci < 0 != (allContingencyIds == null)) {
-                continue;
-            } else {
-                count += 1;
-                allFunctionIds.add(f.getFunctionId());
-                allVariableIds.add(f.getVariableId());
-                if (allContingencyIds != null && c != null) {
-                    allContingencyIds.add(c.getId());
-                }
-            }
-
-            if (funcIds != null && !funcIds.contains(f.getFunctionId())) {
-                continue;
-            }
-            if (varIds != null && !varIds.contains(f.getVariableId())) {
-                continue;
-            }
-            if (c != null && contingencyIds != null && !contingencyIds.contains(c.getId())) {
-                continue;
-            }
-
-            handle.consume(sar, c, f);
-        }
-
-        return count;
-    }
-
-    private boolean canOnlyReturnEmpty(Collection<String> funcIds, Collection<String> varIds, Collection<String> contingencies,
-        SensitivityFunctionType sensitivityFunctionType,
-        List<ContingencyEmbeddable> cs, List<SensitivityFactorEmbeddable> fs) {
-
-        if (contingencies != null && cs.stream().noneMatch(c -> contingencies.contains(c.getId()))) {
-            return true;
-        }
-        if (funcIds != null && fs.stream().noneMatch(f -> funcIds.contains(f.getFunctionId()))) {
-            return true;
-        }
-        if (varIds != null && fs.stream().noneMatch(f -> varIds.contains(f.getVariableId()))) {
-            return true;
-        }
-        if (sensitivityFunctionType != null && fs.stream().noneMatch(f -> f.getFunctionType() == sensitivityFunctionType)) {
-            return true;
-        }
-
-        return false;
-    }
-
     @Transactional(readOnly = true)
     public SensitivityRunQueryResult getRunResult(UUID resultUuid, ResultsSelector selector) {
         AnalysisResultEntity sas = analysisResultRepository.findByResultUuid(resultUuid);
@@ -192,80 +151,128 @@ public class SensitivityAnalysisResultRepository {
             return null;
         }
 
+        Specification<SensitivityEntity> specification = SensitivityRepository.getSpecification(sas,
+                selector.getFunctionType(),
+                selector.getFunctionIds(),
+                selector.getVariableIds(),
+                selector.getContingencyIds(),
+                !selector.getIsJustBefore());
+
+        List<SensitivityEntity> sensitivityEntities = getSensitivityEntities(selector, specification);
+        long filteredSensitivitiesCount = sensitivityRepository.count(specification);
+        return getSensitivityRunQueryResult(selector, sas, sensitivityEntities, filteredSensitivitiesCount);
+    }
+
+    private List<SensitivityEntity> getSensitivityEntities(ResultsSelector selector, Specification<SensitivityEntity> specification) {
+        int pageNumber = 0;
+        int pageSize = Integer.MAX_VALUE;
+        if (selector.getPageSize() != null &&
+                selector.getPageSize() > 0 &&
+                selector.getPageNumber() != null) {
+            pageNumber = selector.getPageNumber();
+            pageSize = selector.getPageSize();
+        }
+
+        Map<ResultsSelector.SortKey, Integer> sortKeysWithWeightAndDirection = selector.getSortKeysWithWeightAndDirection();
+        List<Sort.Order> sortListFiltered = new ArrayList<>();
+        if (sortKeysWithWeightAndDirection != null && !sortKeysWithWeightAndDirection.isEmpty()) {
+            List<Sort.Order> sortList = new ArrayList<>(Collections.nCopies(
+                    sortKeysWithWeightAndDirection.size(), null));
+            sortKeysWithWeightAndDirection.keySet().forEach(sortKey -> {
+                int index = Math.abs(sortKeysWithWeightAndDirection.get(sortKey)) - 1;
+                sortList.add(index, sortKeysWithWeightAndDirection.get(sortKey) > 0 ? Sort.Order.asc(Objects.requireNonNull(getSort(sortKey))) :
+                        Sort.Order.desc(Objects.requireNonNull(getSort(sortKey))));
+            });
+            sortListFiltered = sortList.stream().filter(Objects::nonNull).toList();
+        }
+        Pageable pageable = sortListFiltered.isEmpty() ? PageRequest.of(pageNumber, pageSize) :
+                PageRequest.of(pageNumber, pageSize, Sort.by(sortListFiltered));
+
+        Page<SensitivityEntity> sensiResults = sensitivityRepository.findAll(specification, pageable);
+        return sensiResults.getContent();
+    }
+
+    private SensitivityRunQueryResult getSensitivityRunQueryResult(ResultsSelector selector, AnalysisResultEntity sas,
+                                                                   List<SensitivityEntity> sensitivityEntities,
+                                                                   long filteredSensitivitiesCount) {
+        if (sas == null) {
+            return null;
+        }
+
         SensitivityRunQueryResult.SensitivityRunQueryResultBuilder retBuilder = SensitivityRunQueryResult.builder()
             .isJustBefore(selector.getIsJustBefore())
             .functionType(selector.getFunctionType())
-            .requestedChunkSize(selector.getChunkSize() == null ? 0 : selector.getChunkSize())
+            .requestedChunkSize(selector.getPageSize() == null ? 0 : selector.getPageSize())
             .chunkOffset(selector.getOffset() == null ? 0 : selector.getOffset());
 
-        List<ContingencyEmbeddable> cs = sas.getContingencies();
-        List<SensitivityFactorEmbeddable> fs = sas.getFactors();
-        Collection<String> funcIds = selector.getFunctionIds();
-        Collection<String> varIds = selector.getVariableIds();
-        Collection<String> contingencyIds = selector.getContingencyIds();
-        if (canOnlyReturnEmpty(funcIds, varIds, contingencyIds, selector.getFunctionType(), cs, fs)) {
-            retBuilder.totalSensitivitiesCount(0);
-            retBuilder.filteredSensitivitiesCount(0);
+        if (sensitivityEntities.isEmpty()) {
+            retBuilder.totalSensitivitiesCount(0L);
+            retBuilder.filteredSensitivitiesCount(0L);
             retBuilder.sensitivities(List.of());
             return retBuilder.build();
         }
 
-        Map<Pair<String, String>, SensitivityOfTo> before = new HashMap<>();
         Set<String> allFunctionIds = new TreeSet<>();
         Set<String> allVariableIds = new TreeSet<>();
         Set<String> allContingencyIds = new TreeSet<>();
-        int count = apply(sas, funcIds, varIds, null, cs, fs, selector.getFunctionType(),
-            allFunctionIds, allVariableIds, null, (sar, c, f) -> {
-                before.put(Pair.of(f.getFunctionId(), f.getVariableId()), SensitivityOfTo.builder()
-                    .funcId(f.getFunctionId())
-                    .varId(f.getVariableId())
-                    .varIsAFilter(f.isVariableSet())
-                    .value(sar.getValue())
-                    .functionReference(sar.getFunctionReference())
-                    .build());
-            });
 
+        var totalSensitivitiesCountSpec = SensitivityRepository.getSpecification(sas,
+                selector.getFunctionType(),
+                null,
+                null,
+                null,
+                !selector.getIsJustBefore());
+
+        long count = sensitivityRepository.count(totalSensitivitiesCountSpec);
         if (selector.getIsJustBefore()) {
-            Comparator<SensitivityOfTo> cmp = makeComparatorOfTo(selector.getSortKeysWithWeightAndDirection());
-            List<SensitivityOfTo> befores = new ArrayList<>(before.values());
-            if (cmp != null) {
-                befores.sort(cmp);
-            }
-            complete(retBuilder, allFunctionIds, allVariableIds, null, count, selector, befores);
-            return retBuilder.build();
+            List<SensitivityOfTo> befores = new ArrayList<>();
+            sensitivityEntities.forEach(sensitivityEntity -> {
+                SensitivityFactorEmbeddable factorEmbeddable = sensitivityEntity.getFactor();
+                allFunctionIds.add(factorEmbeddable.getFunctionId());
+                allVariableIds.add(factorEmbeddable.getVariableId());
+                befores.add(SensitivityOfTo.builder()
+                        .funcId(factorEmbeddable.getFunctionId())
+                        .varId(factorEmbeddable.getVariableId())
+                        .varIsAFilter(factorEmbeddable.isVariableSet())
+                        .value(sensitivityEntity.getValue())
+                        .functionReference(sensitivityEntity.getFunctionReference())
+                        .build());
+            });
+            complete(retBuilder, allFunctionIds, allVariableIds, null, filteredSensitivitiesCount, count, befores);
         } else {
             List<SensitivityWithContingency> after = new ArrayList<>();
-            count = apply(sas, funcIds, varIds, contingencyIds, cs, fs, selector.getFunctionType(),
-                allFunctionIds, allVariableIds, allContingencyIds, (sar, c, f) -> {
-                    if (c == null) {
-                        return;
-                    }
-                    SensitivityOfTo b = before.get(Pair.of(f.getFunctionId(), f.getVariableId()));
-                    SensitivityWithContingency r = SensitivityWithContingency.toBuilder(
-                            b, f.getFunctionId(), f.getVariableId())
-                        .varIsAFilter(f.isVariableSet())
-                        .valueAfter(sar.getValue())
-                        .functionReferenceAfter(sar.getFunctionReference())
-                        .contingencyId(c.getId())
+            sensitivityEntities.forEach(sensitivityEntity -> {
+                SensitivityFactorEmbeddable factorEmbeddable = sensitivityEntity.getFactor();
+                allFunctionIds.add(factorEmbeddable.getFunctionId());
+                allVariableIds.add(factorEmbeddable.getVariableId());
+                if (factorEmbeddable.getContingencyContextId() != null) {
+                    allContingencyIds.add(factorEmbeddable.getContingencyContextId());
+                }
+                SensitivityWithContingency r = SensitivityWithContingency.builder()
+                        .funcId(factorEmbeddable.getFunctionId())
+                        .varId(factorEmbeddable.getVariableId())
+                        .varIsAFilter(factorEmbeddable.isVariableSet())
+                        .contingencyId(sensitivityEntity.getContingency().getContingencyId())
+                        .value(sensitivityEntity.getValue())
+                        .functionReference(sensitivityEntity.getFunctionReference())
+                        .valueAfter(sensitivityEntity.getValueAfter())
+                        .functionReferenceAfter(sensitivityEntity.getFunctionReferenceAfter())
                         .build();
-                    after.add(r);
-                });
-            Comparator<SensitivityWithContingency> cmp = makeComparatorWith(selector.getSortKeysWithWeightAndDirection());
-            if (cmp != null) {
-                after.sort(cmp);
-            }
 
-            complete(retBuilder, allFunctionIds, allVariableIds, allContingencyIds, count, selector, after);
-            return retBuilder.build();
+                after.add(r);
+            });
+            complete(retBuilder, allFunctionIds, allVariableIds, allContingencyIds, filteredSensitivitiesCount, count, after);
         }
+        return retBuilder.build();
     }
 
     private void complete(SensitivityRunQueryResult.SensitivityRunQueryResultBuilder retBuilder,
-        Collection<String> allFunctionIds,
-        Collection<String> allVariableIds,
-        Collection<String> allContingencyIds,
-        int count,
-        ResultsSelector selector, List<? extends SensitivityOfTo> filtered
+            Collection<String> allFunctionIds,
+            Collection<String> allVariableIds,
+            Collection<String> allContingencyIds,
+            long filteredSensitivitiesCount,
+            long count,
+            List<? extends SensitivityOfTo> filtered
 
     ) {
         retBuilder.allFunctionIds(allFunctionIds.stream().sorted().collect(Collectors.toList()));
@@ -273,106 +280,21 @@ public class SensitivityAnalysisResultRepository {
         if (allContingencyIds != null) {
             retBuilder.allContingencyIds(allContingencyIds.stream().sorted().collect(Collectors.toList()));
         }
-        retBuilder.filteredSensitivitiesCount(filtered.size());
-        retBuilder.sensitivities(chunkIt(selector, filtered));
+        retBuilder.filteredSensitivitiesCount(filteredSensitivitiesCount);
+        retBuilder.sensitivities(filtered);
         retBuilder.totalSensitivitiesCount(count);
     }
 
-    private static <T extends SensitivityOfTo> List<T> chunkIt(ResultsSelector selector, List<T> befores) {
-        Integer byRunOf = selector.getChunkSize();
-        if (byRunOf != null && byRunOf > 0) {
-            int offset = selector.getOffset() == null ? 0 : selector.getOffset();
-            int start = Math.max(offset, 0);
-            int overEnd = Math.min(offset + byRunOf, befores.size());
-            if (start > overEnd) {
-                LOGGER.error("chunkIt start({}) > overEnd({})", start, overEnd);
-                return List.of();
-            }
-            return befores.subList(start, overEnd);
+    private String getSort(ResultsSelector.SortKey sortKey) {
+        switch (sortKey) {
+            case FUNCTION : return "factor.functionId";
+            case SENSITIVITY : return "value";
+            case REFERENCE : return "functionReference";
+            case VARIABLE : return "factor.variableId";
+            case CONTINGENCY : return "contingency.contingencyId";
+            case POST_REFERENCE : return "functionReferenceAfter";
+            case POST_SENSITIVITY : return "valueAfter";
+            default: return null;
         }
-        return befores;
-    }
-
-    Comparator<SensitivityWithContingency> makeComparatorWith(ResultsSelector.SortKey key) {
-        switch (key) {
-            case FUNCTION:
-                return Comparator.comparing(SensitivityWithContingency::getFuncId);
-            case VARIABLE:
-                return Comparator.comparing(SensitivityWithContingency::getVarId);
-            case CONTINGENCY:
-                return Comparator.comparing(SensitivityWithContingency::getContingencyId);
-            case REFERENCE:
-                return Comparator.comparing(SensitivityWithContingency::getFunctionReference);
-            case SENSITIVITY:
-                return Comparator.comparing(SensitivityWithContingency::getValue);
-            case POST_REFERENCE:
-                return Comparator.comparing(SensitivityWithContingency::getFunctionReferenceAfter);
-            case POST_SENSITIVITY:
-                return Comparator.comparing(SensitivityWithContingency::getValueAfter);
-        }
-        return null;
-    }
-
-    Comparator<SensitivityOfTo> makeComparatorOfTo(ResultsSelector.SortKey key) {
-        switch (key) {
-            case FUNCTION:
-                return Comparator.comparing(SensitivityOfTo::getFuncId);
-            case VARIABLE:
-                return Comparator.comparing(SensitivityOfTo::getVarId);
-            case REFERENCE:
-                return Comparator.comparing(SensitivityOfTo::getFunctionReference);
-            case SENSITIVITY:
-                return Comparator.comparing(SensitivityOfTo::getValue);
-            case POST_SENSITIVITY:
-            case CONTINGENCY:
-            case POST_REFERENCE:
-                return null; // completing the switch appeases Sonar in a way but lowers coverage
-        }
-        return null;
-    }
-
-    Comparator<SensitivityWithContingency> makeComparatorWith(
-        Map<ResultsSelector.SortKey, Integer> sortKeysWithWeightAndDirection) {
-        if (sortKeysWithWeightAndDirection == null) {
-            return null;
-        }
-        ArrayList<Pair<ResultsSelector.SortKey, Boolean>> sortedKeysToDirection = new ArrayList<>(Collections.nCopies(
-            sortKeysWithWeightAndDirection.size(), null));
-        sortKeysWithWeightAndDirection.forEach((k, s) -> {
-            int index = Math.abs(s) - 1;
-            sortedKeysToDirection.set(index, Pair.of(k, s > 0));
-        });
-
-        Optional<Comparator<SensitivityWithContingency>> ret = sortedKeysToDirection.stream()
-            .filter(Objects::nonNull)
-            .map(kd -> {
-                Comparator<SensitivityWithContingency> direct = makeComparatorWith(kd.getKey());
-                return kd.getValue() ? direct : direct.reversed();
-            }).reduce(Comparator::thenComparing);
-
-        return ret.orElse(null);
-    }
-
-    Comparator<SensitivityOfTo> makeComparatorOfTo(
-        Map<ResultsSelector.SortKey, Integer> sortKeysWithWeightAndDirection) {
-        if (sortKeysWithWeightAndDirection == null) {
-            return null;
-        }
-
-        ArrayList<Pair<ResultsSelector.SortKey, Boolean>> sortedKeysToDirection = new ArrayList<>(Collections.nCopies(
-            sortKeysWithWeightAndDirection.size(), null));
-        sortKeysWithWeightAndDirection.forEach((k, s) -> {
-            int index = Math.abs(s) - 1;
-            sortedKeysToDirection.set(index, Pair.of(k, s > 0));
-        });
-
-        Optional<Comparator<SensitivityOfTo>> ret = sortedKeysToDirection.stream()
-            .filter(Objects::nonNull)
-            .map(kd -> {
-                Comparator<SensitivityOfTo> direct = makeComparatorOfTo(kd.getKey());
-                return kd.getValue() ? direct : direct.reversed();
-            }).reduce(Comparator::thenComparing);
-
-        return ret.orElse(null);
     }
 }
